--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet"href="style.css">
   </head>
   <body>
-    Je my vedro.
+    <h1>Největší nadpis 686868</h1>
+    <p>Text odstavec</p> volám cikány
     
   </body>
 </html>
