--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet"href="style.css">
   </head>
   <body>
-    <h1>Největší nadpis 686868</h1>
-    <p>Text odstavec</p> volám cikány
+    <h1> 686868</h1>
+    <p>ahoj</p> volám cikány
     
   </body>
 </html>
