--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1> 686868</h1>
-    <p>ahoj</p> volám cikány
-    
+    <p>
+    </p> volám cikány
+  <strong>Volám Cikány</strong>  
   </body>
 </html>
