--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <h1> 686868</h1>
     <p>
-    </p> volám cikány
+    </p> mam rad pizzu a kapra
+    <a href="https://www.gta 5 .com
   <strong>Volám Cikány</strong>  
   </body>
 </html>
