--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> 686868</h1>
     <p>
     </p> mam rad pizzu a kapra
-    <a href="https://www.gta 5 .com
+    <a href="https://www.gta 5 .com">Odkaz na gta 5</a>
   <strong>Volám Cikány</strong>  
   </body>
 </html>
