--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <h1> 686868</h1>
-    <p>
-    </p> mam rad pizzu a kapra
     <a href="https://www.poky hry .com">Odkaz na gta 5</a>
-  <strong>Volám Cikány</strong>  
-  </body>
+  <strong>Volám Cikány</strong>
+    <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG alt="Kočka divoká"=>  </body>
 </html>
