--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1> 686868</h1>
     <a href="https://www.poky hry .com">Odkaz na gta 5</a>
-  <strong>Volám Cikány</strong>
-    <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG alt="Kočka divoká"=>  </body>
+  <strong>ahoj</strong>
+    <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG" alt="Kočka divoká">  </body>
 </html>
