--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1> 686868</h1>
     <a href="https://www.poky hry .com">Odkaz na gta 5</a>
   <strong>ahoj</strong>
-    <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG" alt="Kočka divoká">  </body>
+    <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG" alt="Kočka divoká">
+    <img src="portal.nature.cz/ft/web/middle/img/16164_16176.JPG"  alt="Kočka divoká"width="1300" heith="100  </body>
 </html>
