--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
     <a href="https://www.poky hry .com">Odkaz na gta 5</a>
   <strong>ahoj</strong>
     <img src="https://portal.nature.cz/ft/web/middle/img/16164_16176.JPG" alt="Kočka divoká">
-    <img src="portal.nature.cz/ft/web/middle/img/16164_16176.JPG"  alt="Kočka divoká"width="1300" heith="100  </body>
+    <img src="portal.nature.cz/ft/web/middle/img/16164_16176.JPG"  alt="Kočka divoká"width="130556567467565687564" heith="999999999999999900  </body>
 </html>
